# ChangeLog for app-text/par
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/par/ChangeLog,v 1.10 2006/12/02 11:16:46 masterdriverz Exp $

  02 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org> par-1.52.ebuild:
  Add blockers, thanks to Georgi Georgiev for reporting, bug 85610

  29 Oct 2005; Fabian Groffen <grobian@gentoo.org> par-1.52.ebuild:
  Marked ~ppc-macos (bug #109427)

  11 Sep 2004; Daniel Ahlberg <aliz@gentoo.org> par-1.52.ebuild:
  Added amd64 keyword, closing #63600.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> par-1.52.ebuild:
  virtual/glibc -> virtual/libc

  28 Jun 2004; Ciaran McCreesh <ciaranm@gentoo.org> par-1.52.ebuild:
  Added ~sparc, ~mips

  02 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org> metadata.xml:
  removed bogus stuff from metadata.xml

*par-1.52 (22 Feb 2004)

  22 Feb 2004; Mamoru KOMACHI <usata@gentoo.org> metadata.xml,
  par-1.52.ebuild:
  Initial import. Ebuild submitted by Bjoen Lindstroem <bkhl@privat.utfors.se>,
  closing bug #18832
