@@ -1,4 +1,4 @@
 DIST Par152.tar.gz 47999 RMD160 253070f319a7f3b3a6f0dad5797882efdbf597bc SHA1 4b83d2ec593bb45ee46d4b7c2bfc590e1f4a41a8 SHA256 33dcdae905f4b4267b4dc1f3efb032d79705ca8d2122e17efdecfd8162067082
-EBUILD par-1.52.ebuild 777 RMD160 9ea42bfd34d830349652caa7fa492a780bdce7d5 SHA1 7ded550d396e11eff6feb3acb7ff70c503664f3a SHA256 e41d1447a5289d243fcbfa31ffc0d2ff53f227198054971f3128f10e8b8b4231
-MISC ChangeLog 1075 RMD160 2b03230d8534818857ca92d69c2480021ead7cf0 SHA1 ada5c10a15d237463a11c39c2bc545f547a46ea4 SHA256 dc4c00d9f94868f3f3d6b66ef1144fe7bb7e74919c07417a38246829251119cd
+EBUILD par-1.52.ebuild 805 RMD160 83769511598eaea1b0443000f7ad5c650a0c0b64 SHA1 18d4f52c6644edbcd083e792f191ef45fad306c5 SHA256 d6f0e50c2784ac690bc937a8210f93d8a425bb9c1ae2a0e36808124816bdf063
+MISC ChangeLog 1254 RMD160 ec67d92feb0279b77b0359e29c51c5d9fb684084 SHA1 ae90d19723c77ee2ec625e621e7c7410a5248354 SHA256 f6bc198bf688a5420cb6a32a1de7f9aa33e7ce2485d0c984eabb71154dacf178
 MISC metadata.xml 160 RMD160 d86217bb48cf4283e08e43bcaabbc919101ad795 SHA1 d6147d00f16e8cfeef893d0764b0675a93d62849 SHA256 56fca1e06f6dcbe3bc12e7d3962998c7cb79d74f218ce8a17b07771b3e06f49e
