@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/par/par-1.52.ebuild,v 1.9 2006/12/02 11:16:46 masterdriverz Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/par/par-1.52.ebuild,v 1.10 2008/01/03 18:16:00 grobian Exp $
 
 EAPI="prefix"
 
@@ -22,7 +22,8 @@ DEPEND="!dev-util/par
 S=${WORKDIR}/${MY_P}
 
 src_compile() {
-	make -f protoMakefile CC="$(tc-getCC) -c $CFLAGS" || die 'make failed'
+	make -f protoMakefile CC="$(tc-getCC) -c $CFLAGS" \
+		LINK1="$(tc-getCC) $LDFLAGS" || die 'make failed'
 }
 
 src_install() {
