@@ -1,6 +1,10 @@
 # ChangeLog for app-text/par
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/par/ChangeLog,v 1.10 2006/12/02 11:16:46 masterdriverz Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/par/ChangeLog,v 1.11 2008/01/03 18:16:00 grobian Exp $
+
+  03 Jan 2008; Fabian Groffen <grobian@gentoo.org> par-1.52.ebuild:
+  Use our gcc for linking, instead of hardcoded cc, respect LDFLAGS. Dropped
+  ppc-macos keyword, see you in prefix
 
   02 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org> par-1.52.ebuild:
   Add blockers, thanks to Georgi Georgiev for reporting, bug 85610
